// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`indexData > should fail when calling procedure without auth 1`] = `"UNAUTHORIZED"`;

exports[`indexData > when authorized > should fail when no blob propagator is defined 1`] = `"Blob propagator is missing"`;

exports[`indexData > when authorized > should fail when no blob propagator is defined 2`] = `undefined`;

exports[`indexData > when authorized > should fail when receiving an empty array of blobs 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 1,
    \\"type\\": \\"array\\",
    \\"inclusive\\": true,
    \\"exact\\": false,
    \\"message\\": \\"Array must contain at least 1 element(s)\\",
    \\"path\\": [
      \\"blobs\\"
    ]
  }
]"
`;

exports[`indexData > when authorized > should fail when receiving an empty array of transactions 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 1,
    \\"type\\": \\"array\\",
    \\"inclusive\\": true,
    \\"exact\\": false,
    \\"message\\": \\"Array must contain at least 1 element(s)\\",
    \\"path\\": [
      \\"transactions\\"
    ]
  }
]"
`;
